[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Viktor Tarasenko <victor.tarasenko@mediapark.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract="*"
opencv-python="*"
click="*"
pdf2image="*"
symspellpy="*"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
